--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,5 +12,51 @@
     <button id="analyzeBtn">Review</button>
     <pre id="output"></pre>
     <script src="popup.js"></script>
+</body>
+</html> -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Code Reviewer</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h2>AI Code Reviewer</h2>
+  <div id="popup-container">
+    <textarea id="codeInput" placeholder="Selected code will appear here..."></textarea>
+    <button id="analyzeBtn">Review</button>
+    <pre id="output"></pre>
+  </div>
+  <div id="ai-button">
+    <img src="ai.jpg" alt="AI" />
+  </div>
+  <script src="popup.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Code Reviewer</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h2>AI Code Reviewer</h2>
+  <div class="container">
+    <textarea id="codeInput" placeholder="Enter or select code..."></textarea>
+    <pre id="output">AI Review will appear here...</pre>
+  </div>
+  <button id="analyzeBtn">Review</button>
+
+  <!-- Floating AI Button -->
+  <div id="ai-button">
+    <img src="ai.jpg" alt="AI">
+  </div>
+
+  <script src="popup.js"></script>
 </body>
 </html>
